--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 🛑 Checkout Code
+      - name: ☑️ Checkout Code
         uses: actions/checkout@v4
 
-      - name: 🟢 Setup Node.js (v22 LTS)
+      - name: 🛠️ Setup Node.js (v22 LTS)
         uses: actions/setup-node@v4
         with:
           node-version: "22"
