--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,11 @@
 name: CraveCourier CI
 
-# Run this workflow on every push to main, and on every pull request to main or dev.
+# Run this workflow on every push to main, and on every pull request
 on:
   push:
     branches: ["main"]
   pull_request:
-    branches: ["main", "dev"]
+    branches: ["main"]
 
 jobs:
   build-lint-test:
@@ -13,16 +13,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: ☑️ Checkout Code
+      - name: 🛑 Checkout Code
         uses: actions/checkout@v4
 
-      - name: 🛠️ Setup Node.js (v22 LTS)
+      - name: 🟢 Setup Node.js (v22 LTS)
         uses: actions/setup-node@v4
         with:
           node-version: "22"
-          cache: "npm"
+          cache: "npm" # Automatically caches your node_modules for faster runs
+
       - name: 📦 Install Dependencies
-        run: npm ci
+        run: npm ci # `npm ci` is faster and stricter than `npm install` for CI environments
 
       - name: ⚡ Cache Turborepo
         uses: actions/cache@v4
@@ -43,8 +44,8 @@ jobs:
 
       - name: 🧹 Run Linters
         run: npm run lint
-        continue-on-error: true
+        continue-on-error: true # Currently set to true so your pipeline doesn't fail if you haven't set up ESLint yet
 
       - name: 🧪 Run Tests
         run: npm run test
-        continue-on-error: true
+        continue-on-error: true # Set to true until we set up Jest/Vitest in a later phase
