--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-turbo-
 
+      # Generate Prisma Client before building so TypeScript has the generated types
+      - name: 🗄️ Generate Prisma Client
+        run: npx prisma generate
+
       # TURBO COMMANDS
       # Because of Turborepo, these will run across ALL your apps in parallel!
 
