--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,11 @@
 {
   "tasks": {
+    "generate": {
+      "dependsOn": ["^generate"],
+      "outputs": ["../../generated/prisma/**", "node_modules/.prisma/client/**"]
+    },
     "build": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["^build", "generate"],
       "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
     },
     "test": {
