chore: update package.json and turbo.json for linting and formatting tools
- Added linting and formatting scripts to package.json
- Updated devDependencies with ESLint, Prettier, and related plugins
- Configured Turbo for formatting tasks in turbo.json

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,9 @@ name: CraveCourier CI
 # Run this workflow on every push to main, and on every pull request
 on:
   push:
-    branches: ["main"]
+    branches: ['main']
   pull_request:
-    branches: ["main"]
+    branches: ['main']
 
 jobs:
   build-lint-test:
@@ -19,8 +19,8 @@ jobs:
       - name: 🟢 Setup Node.js (v22 LTS)
         uses: actions/setup-node@v4
         with:
-          node-version: "22"
-          cache: "npm"
+          node-version: '22'
+          cache: 'npm'
 
       - name: 📦 Install Dependencies
         run: npm ci
