feat: add auth controller tests and improve test coverage reporting

--- a/apps/auth-service/tsconfig.json
+++ b/apps/auth-service/tsconfig.json
@@ -5,6 +5,7 @@
     "target": "ESNext",
     "outDir": "dist",
     "rootDir": "src",
+    "types": ["vitest/globals", "node"],
     "paths": {
       "@/*": ["./src/*"],
       "@/generated/*": ["./generated/*"]
