chore: update test coverage command and configuration for consistency

--- a/turbo.json
+++ b/turbo.json
@@ -12,6 +12,9 @@
       "dependsOn": ["build"],
       "outputs": []
     },
+    "test:coverage": {
+      "outputs": ["coverage/**"]
+    },
     "lint": {},
     "format": {},
     "dev": {
