--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint:fix": "turbo run lint -- --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "test": "turbo run test"
+    "test": "turbo run test",
+    "test:coverage": "turbo run test:coverage"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.3",
@@ -30,6 +31,7 @@
     "prettier": "^3.8.1",
     "turbo": "latest",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.56.0"
+    "typescript-eslint": "^8.56.0",
+    "vitest": "^4.0.18"
   }
 }
